Edit card-container grid rows to prevent card-container from being too large and pushing footer off the page, even when no books are present

--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ button {
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    grid-template-rows: repeat(2, 300px);
+    grid-template-rows: repeat(1, 300px);
     grid-auto-rows: 300px;
     gap: 50px 20px;
     padding: 50px 0px;
